--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tabbybyte/kimten",
   "version": "0.1.1",
+    "publishConfig": {
+    "access": "public"
+  },
   "description": "A micro-agent library: thin wrapper over the Agent interface from Vercel's AI SDK Core v6+",
   "type": "module",
   "main": "index.js",
