--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,20 @@ jobs:
       - name: Coverage (lcov)
         run: npx --yes c8 --include=lib/** --include=index.js --exclude=test/** --reporter=lcov --reporter=text --check-coverage --lines 95 --functions 95 --branches 85 node --test
 
+      - name: Ensure Codecov token present (push only)
+        if: github.event_name == 'push'
+        run: |
+          if [ -z "${CODECOV_TOKEN}" ]; then
+            echo "Missing CODECOV_TOKEN secret (required because branch is protected)."
+            exit 1
+          fi
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
       - name: Upload coverage to Codecov
+        if: github.event_name == 'push' || github.event.pull_request.head.repo.fork == false
         uses: codecov/codecov-action@v5
         with:
           files: ./coverage/lcov.info
           fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
